<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.mircosoderi.crushare.SendConfirmationFragment"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pre"
        android:layout_alignParentTop="true"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:text="@string/confirm_send_preview"
        />

    <ListView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:layout_above="@+id/post"
        android:layout_below="@+id/pre"
        android:layout_marginBottom="20sp"
        android:divider="@android:color/transparent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/post"
        android:layout_above="@+id/send_confirm_buttons"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:textColor="@color/colorAccent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/send_confirm_buttons"
        android:background="@color/colorPrimaryDark">
        <Button
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>


</RelativeLayout>
